Bailey's commit: Clearing out some of the warnings